# anium

./: CMakeLists.txt  LICENSE  README.md
anium/: anium.hpp  button.hpp  configuration.hpp  event.hpp  renderer.hpp  root.hpp  stack.hpp  view.hpp  window.hpp
modules/: FindCairo.cmake  FindGLFW.cmake
test/: cairo.cpp  event.cpp  interactive.cpp
